2002-07-04  Cristy  <cristy@mystic.es.dupont.com>
  * Typos corrected in perl.html (thanks to Ron Savage);
  * A color profile is now correctly referred to as ICM instead of IPTC.

2002-07-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Added NTRegistryKeyLookup() to nt.c in order to look up ImageMagick
    installation parameters from the Windows Registry.
  * Updated GetMagickConfigurePath() in magick.c to use installation
    path data from the Windows Registry (if available).
  * Updated VisualMagick/ImageMagick.iss so that Windows Registry is
    updated by install package.

2002-07-03  Cristy  <cristy@mystic.es.dupont.com>
  * Semaphore.c will compile now when pthreads are not present.
  * 8-Bit Quantum PCD images now read correctly.
  * The antialias member of the ImageInfo structure was not being cloned.

2002-07-01  Cristy  <cristy@mystic.es.dupont.com>
  * ImageMagick 5.4.7 released.

2002-06-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * magick/nt.c (readdir): Make readdir re-entrant for each instance
    of DIR.  This should improve thread safety.
  * ltdl/ltdl.c : Support building as DLL under Win32.

2002-06-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Update to use Automake 1.6.2

2002-06-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Try harder when searching for Ghostscript fonts under Linux.

2002-06-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Identify PICT files via magic.mgk.

2002-06-18  Cristy  <cristy@mystic.es.dupont.com>
  * Added PerlMagick threading support (patch by Doug MacEachern).

2002-06-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * CLIPBOARD and EMF modules compile under MinGW and Cygwin.

2002-06-14  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
  * The wbmp writer would dump core if it received a DirectClass image
    that contained only black and white pixels, because no colormap exists.

2002-06-09  Cristy  <cristy@mystic.es.dupont.com>